--- a/src/index.css
+++ b/src/index.css
@@ -6,40 +6,23 @@
 .map-h2{
   position:absolute;
   top:.7rem;
-  left:1rem;
+  left:02%;
   color:rgb(33, 88, 33);
-  z-index:40;
+  z-index:10;
   margin:0;
   padding:0;
-  background-color:white;
-}
-
-
-/*
+ background-color:transparent;
 }
 .search{
+  font-size:30px;
   position:absolute;
   top:.7rem;
   left: 50%;
-  transform:translatex(-50%);
+  transform:black;
   width: 100%;
   color:rgb(33, 88, 33);
   z-index:10;
   margin:0;
   padding:0;
-  /* background-color:white; */
-
-
-
-.weatherContainer {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction:row;
-  text-align: center;
-  align-items: center;
-  justify-content: 'center';
-  background-color: red; /* For browsers that do not support gradients */
-  background-image: linear-gradient(to right, red , yellow);
-
+  background-color:rgb(164, 229, 164);
 }
