--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,12 @@
   padding: 0;
   box-sizing:border-box;
 }
-.map-h1{
+.map-h2{
   font-size:20px;
   position:absolute;
   top:.7rem;
-  left:0%;
-  color:#197019;
+  left:02%;
+  color:#74e474;
   z-index:10;
   margin:0;
   padding:0;
